<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choose_starter"
    tools:context=".ChooseStarterPokemonFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/trainer_name_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="#BAA701"
            android:hint="@string/choose_starter_editText1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/choose_pokemon_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_starter_textView1"
            android:textColor="#307DFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/layout_container_starters_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trainer_name_edit_txt"
            app:layout_constraintVertical_bias="0.25" />

        <LinearLayout
            android:id="@+id/layout_container_starters_images"
            android:layout_marginVertical="40dp"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/layout_container_starters_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_pokemon_text_view">



            <ImageView
                android:id="@+id/pokemon_one_img"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:clickable="false"
                android:contentDescription="@string/pokemon_one_image"
                android:focusable="false"
                android:layout_weight="0.33"
                android:src="@mipmap/ic_launcher_round"
                android:tag="squirtle" />



            <ImageView
                android:id="@+id/pokemon_two_img"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:clickable="false"
                android:layout_weight="0.33"
                android:contentDescription="@string/pokemon_two_image"
                android:focusable="false"
                android:src="@mipmap/ic_launcher_round"
                android:tag="bulbasaur" />



            <ImageView
                android:id="@+id/pokemon_three_img"
                android:layout_width="55dp"
                android:layout_height="70dp"
                android:clickable="false"
                android:layout_weight="0.33"
                android:contentDescription="@string/pokemon_three_image"
                android:focusable="false"
                android:src="@mipmap/ic_launcher_round"
                android:tag="charmander" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_container_starters_names"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_marginTop="-25dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|fill_horizontal"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintBottom_toTopOf="@id/nickname_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_container_starters_images">


            <TextView
                android:id="@+id/pokemon_one_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/squirtle"
                android:textColor="#88B1F6"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/pokemon_two_name"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription=""
                android:focusable="false"
                android:text="@string/bulbausaur"
                android:textColor="#88B1F6"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/pokemon_three_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription=""
                android:focusable="false"
                android:text="@string/charmander"
                android:textColor="#88B1F6"
                android:textSize="20sp" />


        </LinearLayout>

        <EditText
            android:id="@+id/nickname_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:autofillHints="name"
            android:background="#BAA701"
            android:hint="@string/hint_nickname"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_container_starters_names" />

        <Button
            android:id="@+id/create_trainer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1_starter_pokemon"
            android:textSize="20sp"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickname_edit_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
